--- a/OpenCourse-subtitle-assistence/build.gradle
+++ b/OpenCourse-subtitle-assistence/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.5'
+    compile 'org.jsoup:jsoup:1.8.1'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
